# agent-lobby

./: AGENT.md  CONTRIBUTING.md  OPERATORS.md  README.md  RELEASE.md  battleship-peer.html  battleship-preview.html  index.html  package-lock.json  package.json  playwright.config.ts  pong-preview.html  vite.config.ts  vitest.config.ts
.github/scripts/: generate-updater-json.mjs
.github/workflows/: deploy-pages.yml  publish.yml
e2e/: battleship-observe.spec.ts  battleship-two-users.spec.ts  pong-observe.spec.ts  pong-peer.html  pong-two-users.spec.ts
public/: chess-preview.html  manifest.webmanifest
public/themes/: skull-and-roses.css  spice-mosaic.css  steal-your-face.css  stealie-cerulean.css
src/: AgentAmpWindowApp.vue  App.vue  DMWindowApp.vue  MediaLibraryWindowApp.vue  PinnedVideoWindowApp.vue  ThemeEditorWindowApp.vue  main.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  nsis-file-association.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: autogenerated.toml  theme-editor.toml
src-tauri/src/: lib.rs  main.rs
src/components/: AgentAmpPlayer.vue  AuthBackground.vue  AuthScreen.vue  BattleshipGame.vue  ChatArea.vue  DMChatModal.vue  DMRequestStack.vue  LavaBackground.vue  NetworkConfigModal.vue  PongGame.vue  ProfileSettingsModal.vue  SettingsModal.vue  Sidebar.vue  SimulationBackground.vue  SinewaveBackground.vue  SpectrumAnalyzer.vue  StarfieldBackground.vue  ThemeEditorPreview.vue  VideoWindow.vue
src/composables/: messageEffectHelpers.ts  useAutoUpdater.ts  useTheme.ts  (+10 more)
(+99 files in other folders)
