[package]
name = "agent-lobby"
version = "0.4.20"
description = "A Chat App"
authors = ["thecompanyofwolves"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_lobby_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "image-png", "image-ico"] }
portpicker = "0.1"
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2"
tauri-plugin-localhost = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-store = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
audiotags = "0.5.0"
rustfft = "6"
walkdir = "2"

